--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,4 +21,4 @@ jobs:
           git pull origin master
           git status
           npm install --only=prod
-          pm2 restart tg-bot-vyot
+          pm2 restart tg-bot-vyot_v2
