--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: vyot-bot CD-1
+name: vyot-bot CD-serv
 
 on:
   push:
@@ -15,9 +15,9 @@ jobs:
         host: ${{ secrets.HOST }} #
         username: ${{ secrets.USERNAME }}
         key: ${{ secrets.PRIVATE_KEY }}
-        port: 22
+        port: ${{ secrets.PORT }}
         script: |
-          cd ~/vyot
+          cd ~/vyot-bot/vyot
           git pull origin master
           git status
           npm install --only=prod
